--- a/style.css
+++ b/style.css
@@ -79,7 +79,12 @@ h2 {
   outline: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
-.delete-item {
+.delete-items {
   margin-top: 20px;
 }
 
+.delete-items input {
+  padding: 10px;
+  outline: 0;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
